--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     height: 3.125rem;
     margin: 0.3125rem;
     box-shadow: 0.0625rem 0.0625rem 0.0625rem #000;
+    cursor: pointer;
   }
 
   .clear {
