--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin-top: 2.5rem;
     border: solid 0.0625rem #000;
     padding: 1.25rem;
-    background-color: #334;
+    background-color: rgb(27, 26, 26);
     border-radius: 0.8rem;
     box-shadow: 0.0625rem 0.0625rem 0.3125rem #000;
   }
@@ -13,6 +13,10 @@
     margin: 0.3125rem;
     box-shadow: 0.0625rem 0.0625rem 0.0625rem #000;
     cursor: pointer;
+  }
+
+  #b_equal{
+    background-color: rgb(255, 123, 0);
   }
 
   .clear {
